--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import '~antd/dist/antd.css';
 .App {
   height: 100vh;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -37,30 +37,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-#components-layout-demo-custom-trigger .trigger {
-  padding: 0 24px;
-  font-size: 18px;
-  line-height: 64px;
-  cursor: pointer;
-  transition: color 0.3s;
-}
-
-#components-layout-demo-custom-trigger .trigger:hover {
-  color: #1890ff;
-}
-
-#components-layout-demo-custom-trigger .logo {
-  height: 32px;
-  margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.site-layout .site-layout-background {
-  background: #fff;
-}
-
-.ant-layout.ant-layout-has-sider{
-  height: 100vh;
 }
